<resources>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://culater.herokuapp.com\",\n  }\n}]</string>

    <string name="app_name">Joinup</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_create">CreateActivity</string>

    <string name="url_value">URL value</string>

    <!-- Shared Preferences -->
    <string name="preference_file_key">io.github.core55.joinup.PREFERENCE_FILE_KEY</string>
    <string name="auth_user">AUTH_USER</string>
    <string name="anonymous_user">ANONYMOUS_USER</string>
    <string name="jwt_string">JWT_STRING</string>
    <!--TODO: Remove following -->
    <string name="user_username">USER_USERNAME</string>
    <string name="user_nickname">USER_NICKNAME</string>

    <!-- Navigation Drawer -->
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string-array name="lang_from">
        <item>English</item>
    </string-array>

    <string-array name="lang_to">
        <item>Swedish</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="auth_header">Joinup</string>
    <string name="register_name_label">Name</string>
    <string name="register_name_placeholder">Type your name</string>
    <string name="register_email_label">E-mail</string>
    <string name="register_email_placeholder">Type your e-mail</string>
    <string name="register_password_label">Password</string>
    <string name="register_password_placeholder">Type your password</string>
    <string name="register_main_button">Register</string>
    <string name="register_redirect_login">Already a user? Login here</string>
    <string name="email_confirm_message">Thank you for registering on Joinup! We have sent you an email to confirm your address.</string>
    <string name="email_confirm_redirect_welcome">Back to the Welcome Page</string>
    <string name="login_main_button">Login</string>
    <string name="login_redirect_register">Not yet a user? Register here</string>
    <string name="welcome_create_meetup_button">Create Meetup</string>
    <string name="search_location_placeholder">Search a location...</string>
    <string name="location_search_button">Search</string>
    <string name="applink_message">Loading the meetup...</string>
    <string name="title_activity_not_confirmed">EmailNotConfirmedActivity</string>
    <string name="title_activity_applink">ApplinkActivity</string>
    <string name="title_joinup">Joinup</string>
    <string name="type_status">Update status</string>
    <string name="edit_status">edit</string>


</resources>
