<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2489B0"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1"
    tools:context="io.github.core55.joinup.Activity.LoginActivity">

    <!--Page Title-->
    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:text="@string/auth_header"
        android:textColor="@android:color/white"
        android:textSize="64sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <!--Create Meetup-->
    <Button
        android:id="@+id/welcome_create_meetup_button"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="278dp"
        android:background="@drawable/custom_textfield"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_create_meetup_button"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <!--Login Button-->
    <Button
        android:id="@+id/welcome_login_button"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_textfield"
        android:fontFamily="sans-serif"
        android:text="@string/login_main_button"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_register_button"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <!--Register Button-->
    <Button
        android:id="@+id/welcome_register_button"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/custom_textfield"
        android:fontFamily="sans-serif"
        android:text="@string/register_main_button"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
